[package]
name = "axum-ws-broadcaster"
version = "0.2.0"
edition = "2021"
authors = ["Necdet Arda Etiman <arda_etiman_799@windowslive.com>"]
repository = "https://github.com/Necoo33/axum-ws-broadcaster"
license = "MIT"
readme = "README.md"
keywords = ["websocket", "broadcasting", "axum", "web", "streaming"]
categories = ["web-programming::websocket", "network-programming"]
description = "A broadcaster liblary for axum::extract::ws and axum-typed-websockets that includes grouping and conditional broadcasting."
rust-version = "1.70"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
axum-typed-websockets = { version = "0.6.0", optional = true }
serde = { version = "1.0.215", features = ["derive"] }
futures-util = "0.3.31"
axum = { version = "0.7.9", features = ["ws"]}

[dev-dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[features]
default = []
typed = ["axum-typed-websockets"]

[lib]
name = "axum_wsb"

[[example]]
name="typed-example"
path="examples/typed.rs" # cargo run --example typed-example --features typed

[[example]]
name="normal-example"
path="examples/normal.rs" # cargo run --example normal-example